--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -26,11 +26,13 @@ body {
   font-family: "Poppins", sans-serif;
   color: #334680;
   background-color: #f6f7fb;
+  height: 100%;
 }
 
 #root {
   padding: 4rem;
   width: 100%;
+  height: 100%;
 }
 #root ::-moz-placeholder {
   color: #b9bdcf;
@@ -42,6 +44,7 @@ body {
 main {
   display: grid;
   grid-template-columns: 380px 1fr;
+  grid-template-rows: 1fr;
   gap: 2rem;
   margin-top: 2rem;
 }
@@ -109,29 +112,29 @@ main {
   cursor: pointer;
 }
 
-.sidebar input {
+section.sidebar input {
   margin: 0 0.75rem;
   transform: scale(1.25);
 }
-.sidebar label {
+section.sidebar label {
   font-size: 14px;
   font-weight: 500;
 }
-.sidebar h2 {
+section.sidebar h2 {
   text-transform: uppercase;
   color: #b9bdcf;
   margin: 1rem 0;
   font-size: 16px;
 }
-.sidebar .full-time,
-.sidebar li {
+section.sidebar .full-time,
+section.sidebar li {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   justify-content: flex-start;
 }
-.sidebar .search {
+section.sidebar .search {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,7 +149,7 @@ main {
   height: 2.5rem;
   font-family: "Roboto", sans-serif;
 }
-.sidebar .search input {
+section.sidebar .search input {
   font-size: 14.5px;
   height: 2rem;
   margin: 0;
@@ -154,14 +157,14 @@ main {
   width: 100%;
   border: none;
 }
-.sidebar .search input:focus {
+section.sidebar .search input:focus {
   outline: none;
   border: none;
 }
-.sidebar .options {
+section.sidebar .options {
   margin-top: 1.5rem;
 }
-.sidebar .options li {
+section.sidebar .options li {
   margin-bottom: 0.5rem;
 }
 
@@ -172,15 +175,16 @@ section.jobs-container {
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  border-bottom: 1px solid red;
+  height: 100%;
 }
 section.jobs-container .jobs {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
   width: 100%;
+  height: 100%;
 }
 section.jobs-container .jobs li {
   background-color: #fff;
@@ -264,6 +268,7 @@ section.jobs-container .jobs li .info .right .time i {
 }
 section.jobs-container nav {
   align-self: flex-end;
+  margin-top: 1rem;
 }
 section.jobs-container nav ul {
   display: flex;
