--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -42,11 +42,13 @@ body {
 	font-family: "Poppins", sans-serif;
 	color: $text;
 	background-color: #f6f7fb;
+	height: 100%;
 }
 
 #root {
 	padding: 4rem;
 	width: 100%;
+	height: 100%;
 
 	::placeholder {
 		color: $main-grey;
@@ -56,6 +58,7 @@ body {
 main {
 	display: grid;
 	grid-template-columns: 380px 1fr;
+	grid-template-rows: 1fr;
 	gap: 2rem;
 	margin-top: 2rem;
 }
@@ -135,7 +138,7 @@ main {
 // Sidebar
 // ===============
 
-.sidebar {
+section.sidebar {
 	input {
 		margin: 0 0.75rem;
 		transform: scale(1.25);
@@ -203,12 +206,13 @@ section.jobs-container {
 	font-family: "Roboto", sans-serif;
 	@include flexCenter(column);
 	justify-content: space-between;
-	border-bottom: 1px solid red;
+	height: 100%;
 
 	.jobs {
 		@include flexCenter(column);
-		gap: 1.5rem;
+		gap: 1rem;
 		width: 100%;
+		height: 100%;
 
 		li {
 			background-color: #fff;
@@ -291,6 +295,7 @@ section.jobs-container {
 
 	nav {
 		align-self: flex-end;
+		margin-top: 1rem;
 
 		ul {
 			@include flexCenter(row);
@@ -335,6 +340,11 @@ section.jobs-container {
 		}
 	}
 }
+
+// ===============
+// Job View
+// ===============
+
 
 // ===============
 // Title
