--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -174,6 +174,10 @@ section.sidebar {
 		height: 2.5rem;
 		font-family: "Roboto", sans-serif;
 
+		i {
+			color: $main-grey;
+		}
+
 		input {
 			font-size: 14.5px;
 			height: 2rem;
@@ -344,7 +348,6 @@ section.jobs-container {
 // ===============
 // Job View
 // ===============
-
 
 // ===============
 // Title
