--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -404,4 +405,41 @@ section.jobs-container nav ul li.break:hover {
     flex-direction: row;
     gap: 1.5rem;
   }
+}
+section.job-view {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  gap: 1rem;
+}
+section.job-view .sidebar button {
+  color: #1e86ff;
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
+section.job-view .sidebar button i {
+  color: #1e86ff;
+  margin-right: 1rem;
+}
+section.job-view .sidebar h2 {
+  color: #b9bdcf;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin: 1rem 0 0.5rem 0;
+}
+section.job-view .sidebar p,
+section.job-view .sidebar a {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+}
+section.job-view .sidebar a {
+  color: #1e86ff;
+}
+section.job-view .sidebar li {
+  list-style-type: "→";
+  list-style-position: inside;
+  padding-left: 1rem;
+}
+section.job-view .sidebar li a {
+  padding-left: 0.5rem;
 }/*# sourceMappingURL=style.css.map */
