--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -426,21 +426,21 @@ section.jobs-container {
 }
 
 @media only screen and (max-width: 680px) {
-    // make search bar longer
+	// make search bar longer
 	.search-container .search-bar {
 		width: calc(100% - 25px);
 	}
 }
 
 @media only screen and (max-width: 655px) {
-    // make search bar longer
+	// make search bar longer
 	.search-container .search-bar {
 		width: 100%;
 	}
 }
 
 @media only screen and (max-width: 630px) {
-    // make search bar longer
+	// make search bar longer
 	.search-container {
 		padding: 2.5rem 1rem;
 	}
@@ -457,7 +457,7 @@ section.jobs-container {
 }
 
 @media only screen and (max-width: 620px) {
-    // move right info to under the left info
+	// move right info to under the left info
 	section.jobs-container .jobs li .info {
 		flex-direction: column;
 		align-items: flex-start;
@@ -474,6 +474,52 @@ section.jobs-container {
 // ===============
 // Job View
 // ===============
+
+section.job-view {
+	display: grid;
+	grid-template-columns: 300px 1fr;
+	gap: 1rem;
+
+	.sidebar {
+		button {
+			color: $button;
+			cursor: pointer;
+			margin-bottom: 1rem;
+			i {
+				color: $button;
+				margin-right: 1rem;
+			}
+		}
+
+		h2 {
+			color: $main-grey;
+			text-transform: uppercase;
+			font-size: 16px;
+			margin: 1rem 0 0.5rem 0;
+		}
+
+		p,
+		a {
+			font-weight: 500;
+			font-size: 14px;
+			line-height: 21px;
+		}
+
+		a {
+			color: $button;
+		}
+
+		li {
+			list-style-type: "→";
+			list-style-position: inside;
+			padding-left: 1rem;
+
+			a {
+				padding-left: 0.5rem;
+			}
+		}
+	}
+}
 
 // ===============
 // Title
