--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -49,6 +49,42 @@ main {
   margin-top: 2rem;
 }
 
+.full-time {
+  border: 1.5px solid #334680;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 0.25rem 0.5rem;
+}
+
+.location,
+.location i,
+.time,
+.time i {
+  color: #b9bdcf;
+  font-size: 12.5px;
+}
+
+.time i,
+.location i {
+  margin-right: 0.35rem;
+}
+
+.img-container {
+  background: #f2f2f2;
+  min-width: 90px;
+  height: 90px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.img-container p {
+  font-size: 12px;
+  color: #bdbdbd;
+}
+
 .title {
   position: absolute;
   left: 4rem;
@@ -126,7 +162,7 @@ section.sidebar h2 {
   margin: 1rem 0;
   font-size: 16px;
 }
-section.sidebar .full-time,
+section.sidebar .full-time-checkbox,
 section.sidebar li {
   display: flex;
   justify-content: center;
@@ -206,20 +242,6 @@ section.jobs-container .jobs li {
 section.jobs-container .jobs li:hover {
   background-color: #e3eafd;
 }
-section.jobs-container .jobs li .img-container {
-  background: #f2f2f2;
-  min-width: 90px;
-  height: 90px;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
-section.jobs-container .jobs li .img-container p {
-  font-size: 12px;
-  color: #bdbdbd;
-}
 section.jobs-container .jobs li .info {
   display: flex;
   justify-content: center;
@@ -242,13 +264,6 @@ section.jobs-container .jobs li .info .left h6 {
 section.jobs-container .jobs li .info .left p {
   font-size: 18px;
 }
-section.jobs-container .jobs li .info .left button {
-  border: 1.5px solid #334680;
-  border-radius: 4px;
-  font-weight: bold;
-  font-size: 12px;
-  padding: 0.25rem 0.5rem;
-}
 section.jobs-container .jobs li .info .right {
   align-self: flex-end;
   display: flex;
@@ -256,18 +271,6 @@ section.jobs-container .jobs li .info .right {
   align-items: center;
   flex-direction: row;
   gap: 2rem;
-  font-size: 12.5px;
-}
-section.jobs-container .jobs li .info .right i {
-  margin-right: 0.35rem;
-}
-section.jobs-container .jobs li .info .right .location,
-section.jobs-container .jobs li .info .right .location i {
-  color: #b9bdcf;
-}
-section.jobs-container .jobs li .info .right .time,
-section.jobs-container .jobs li .info .right .time i {
-  color: #b7bcce;
 }
 section.jobs-container nav {
   align-self: flex-end;
@@ -424,7 +427,7 @@ section.job-view .sidebar h2 {
   color: #b9bdcf;
   text-transform: uppercase;
   font-size: 16px;
-  margin: 1rem 0 0.5rem 0;
+  margin: 1.5rem 0 0.5rem 0;
 }
 section.job-view .sidebar p,
 section.job-view .sidebar a {
@@ -450,4 +453,21 @@ section.job-view main {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  gap: 0;
+  margin-top: 0;
+  font-family: "Roboto", sans-serif;
+}
+section.job-view main .top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+  margin-bottom: 0.5rem;
+}
+section.job-view main .top h1 {
+  font-size: 24px;
+}
+section.job-view main .time {
+  font-size: 13px;
 }/*# sourceMappingURL=style.css.map */
