--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -63,6 +63,44 @@ main {
 }
 
 // ===============
+// Re-used Components
+// ===============
+
+.full-time {
+	border: 1.5px solid $text;
+	border-radius: 4px;
+	font-weight: bold;
+	font-size: 12px;
+	padding: 0.25rem 0.5rem;
+}
+
+.location,
+.location i,
+.time,
+.time i {
+	color: $main-grey;
+	font-size: 12.5px;
+}
+
+.time i,
+.location i {
+	margin-right: 0.35rem;
+}
+
+.img-container {
+	background: #f2f2f2;
+	min-width: 90px;
+	height: 90px;
+	border-radius: 4px;
+	@include flexCenter(row);
+
+	p {
+		font-size: 12px;
+		color: #bdbdbd;
+	}
+}
+
+// ===============
 // Title
 // ===============
 
@@ -155,7 +193,7 @@ section.sidebar {
 		font-size: 16px;
 	}
 
-	.full-time,
+	.full-time-checkbox,
 	li {
 		@include flexCenter(row);
 		justify-content: flex-start;
@@ -202,7 +240,7 @@ section.sidebar {
 }
 
 // ===============
-// Title
+// Jobs
 // ===============
 
 section.jobs-container {
@@ -232,19 +270,6 @@ section.jobs-container {
 				background-color: $light-blue;
 			}
 
-			.img-container {
-				background: #f2f2f2;
-				min-width: 90px;
-				height: 90px;
-				border-radius: 4px;
-				@include flexCenter(row);
-
-				p {
-					font-size: 12px;
-					color: #bdbdbd;
-				}
-			}
-
 			.info {
 				@include flexCenter(row);
 				justify-content: space-between;
@@ -262,35 +287,12 @@ section.jobs-container {
 					p {
 						font-size: 18px;
 					}
-
-					button {
-						border: 1.5px solid $text;
-						border-radius: 4px;
-						font-weight: bold;
-						font-size: 12px;
-						padding: 0.25rem 0.5rem;
-					}
 				}
 
 				.right {
 					align-self: flex-end;
 					@include flexCenter(row);
 					gap: 2rem;
-					font-size: 12.5px;
-
-					i {
-						margin-right: 0.35rem;
-					}
-
-					.location,
-					.location i {
-						color: $main-grey;
-					}
-
-					.time,
-					.time i {
-						color: $light-grey;
-					}
 				}
 			}
 		}
@@ -495,7 +497,7 @@ section.job-view {
 			color: $main-grey;
 			text-transform: uppercase;
 			font-size: 16px;
-			margin: 1rem 0 0.5rem 0;
+			margin: 1.5rem 0 0.5rem 0;
 		}
 
 		p,
@@ -523,7 +525,24 @@ section.job-view {
 	main {
 		@include flexCenter(column);
 		align-items: flex-start;
-        justify-content: flex-start;
+		justify-content: flex-start;
+		gap: 0;
+		margin-top: 0;
+		font-family: "Roboto", sans-serif;
+
+		.top {
+			@include flexCenter(row);
+			gap: 1rem;
+			margin-bottom: 0.5rem;
+
+			h1 {
+				font-size: 24px;
+			}
+		}
+
+		.time {
+			font-size: 13px;
+		}
 	}
 }
 
