--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -73,7 +73,7 @@ main {
 .img-container {
   background: #f2f2f2;
   min-width: 90px;
-  height: 90px;
+  min-height: 90px;
   border-radius: 4px;
   display: flex;
   justify-content: center;
@@ -470,4 +470,35 @@ section.job-view main .top h1 {
 }
 section.job-view main .time {
   font-size: 13px;
+}
+section.job-view main .company-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+  margin: 1.5rem 0;
+}
+section.job-view main .company-info .img-container {
+  min-width: 60px;
+  min-height: 60px;
+}
+section.job-view main .company-info .img-container p {
+  font-size: 11.5px;
+}
+section.job-view main .company-info .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+section.job-view main .company-info .info h2 {
+  font-size: 18px;
+}
+section.job-view main .description {
+  font-size: 16px;
+  line-height: 150%;
 }/*# sourceMappingURL=style.css.map */
