info on front page matched to data

--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -84,6 +84,11 @@ main {
   font-size: 12px;
   color: #bdbdbd;
 }
+.img-container img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 
 .title {
   position: absolute;
