--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -93,10 +93,16 @@ main {
 	min-height: 90px;
 	border-radius: 4px;
 	@include flexCenter(row);
+	// background: white;
 
 	p {
 		font-size: 12px;
 		color: #bdbdbd;
+	}
+
+	img {
+		width: 100%;
+		object-fit: contain;
 	}
 }
 
