--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -70,6 +70,7 @@ main {
   margin-right: 0.35rem;
 }
 
+.not-found,
 .img-container {
   background: #f2f2f2;
   min-width: 90px;
@@ -80,14 +81,19 @@ main {
   align-items: center;
   flex-direction: row;
 }
+.not-found p,
 .img-container p {
   font-size: 12px;
   color: #bdbdbd;
 }
+.not-found img,
 .img-container img {
-  width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+.img-container {
+  background-color: #fff;
 }
 
 .title {
@@ -484,10 +490,12 @@ section.job-view main .company-info {
   gap: 1rem;
   margin: 1.5rem 0;
 }
+section.job-view main .company-info .not-found,
 section.job-view main .company-info .img-container {
   min-width: 60px;
   min-height: 60px;
 }
+section.job-view main .company-info .not-found p,
 section.job-view main .company-info .img-container p {
   font-size: 11.5px;
 }
