make job view responsive

--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -517,4 +517,18 @@ section.job-view main .description {
 }
 section.job-view main .description p {
   margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 845px) {
+  section.job-view main .top {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+  }
+}
+@media only screen and (max-width: 740px) {
+  section.job-view {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
 }/*# sourceMappingURL=style.css.map */
