--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -592,6 +592,22 @@ section.job-view {
 	}
 }
 
+@media only screen and (max-width: 845px) {
+    // move full-time under title
+    section.job-view main .top {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.5rem;
+    }
+}
+
+@media only screen and (max-width: 740px) {
+    section.job-view {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+}
+
 // ===============
 // Title
 // ===============
