--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -203,7 +203,7 @@ section.sidebar {
 		font-size: 16px;
 	}
 
-	.full-time-checkbox,
+	.from-home-checkbox,
 	li {
 		@include flexCenter(row);
 		justify-content: flex-start;
