--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -39,7 +39,7 @@ li {
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "Poppins", sans-serif;
+	font-family: 'Poppins', sans-serif;
 	color: $text;
 	background-color: #f6f7fb;
 	height: 100%;
@@ -138,7 +138,7 @@ main {
 	background: url(../media/backgroundImg.png);
 	padding: 2.5rem;
 	border-radius: 10px;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Roboto', sans-serif;
 
 	.search-bar {
 		height: 3rem;
@@ -168,7 +168,7 @@ main {
 			}
 		}
 
-		input[type="submit"] {
+		input[type='submit'] {
 			background-color: $button;
 			color: #fff;
 			height: 2.5rem;
@@ -219,7 +219,7 @@ section.sidebar {
 		border-radius: 4px;
 		padding: 0 1rem;
 		height: 2.5rem;
-		font-family: "Roboto", sans-serif;
+		font-family: 'Roboto', sans-serif;
 
 		i {
 			color: $main-grey;
@@ -250,11 +250,24 @@ section.sidebar {
 }
 
 // ===============
+// Loading
+// ===============
+
+.loading {
+	width: 100%;
+	position: relative;
+
+	&div:only-child {
+		position: absolute;
+	}
+}
+
+// ===============
 // Jobs
 // ===============
 
 section.jobs-container {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Roboto', sans-serif;
 	@include flexCenter(column);
 	justify-content: space-between;
 	height: 100%;
@@ -522,7 +535,7 @@ section.job-view {
 		}
 
 		li {
-			list-style-type: "→";
+			list-style-type: '→';
 			list-style-position: inside;
 			padding-left: 1rem;
 
@@ -538,7 +551,7 @@ section.job-view {
 		justify-content: flex-start;
 		gap: 0;
 		margin-top: 0;
-		font-family: "Roboto", sans-serif;
+		font-family: 'Roboto', sans-serif;
 
 		.top {
 			@include flexCenter(row);
@@ -585,27 +598,27 @@ section.job-view {
 			font-size: 16px;
 			line-height: 150%;
 
-            p {
-                margin-bottom: 1rem;
-            }
+			p {
+				margin-bottom: 1rem;
+			}
 		}
 	}
 }
 
 @media only screen and (max-width: 845px) {
-    // move full-time under title
-    section.job-view main .top {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0.5rem;
-    }
+	// move full-time under title
+	section.job-view main .top {
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 0.5rem;
+	}
 }
 
 @media only screen and (max-width: 740px) {
-    section.job-view {
-        grid-template-columns: 1fr;
-        gap: 2rem;
-    }
+	section.job-view {
+		grid-template-columns: 1fr;
+		gap: 2rem;
+	}
 }
 
 // ===============
