--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -21,3 +21,12 @@ body {
 	font-size: 16px;
 	font-family: "Rubik", sans-serif;
 }
+
+// =============
+// Comment
+// =============
+
+
+// =============
+// 
+// =============
