--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -2,9 +2,60 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  list-style-type: none;
+  font-size: 16px;
 }
 
 body {
   font-size: 16px;
   font-family: "Rubik", sans-serif;
+  background-color: hsl(228, 33%, 97%);
+  padding: 3rem;
+}
+
+ul.comments {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+ul.comments .comment {
+  background-color: hsl(0, 0%, 100%);
+  width: calc(100% - 500px);
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+}
+ul.comments .comment .score {
+  background-color: hsl(223, 19%, 93%);
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  width: 100px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.75rem;
+  font-weight: 500;
+}
+ul.comments .comment .score i {
+  color: hsl(211, 10%, 45%);
+  font-size: 12px;
+  width: 100%;
+  text-align: center;
+}
+ul.comments .comment .score i:hover {
+  color: hsl(238, 40%, 52%);
+  cursor: pointer;
+}
+ul.comments .comment .score .value {
+  color: hsl(238, 40%, 52%);
 }/*# sourceMappingURL=style.css.map */
