--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -13,6 +13,10 @@ body {
   padding: 3rem;
 }
 
+img {
+  width: 100%;
+}
+
 ul.comments {
   width: 100%;
   display: flex;
@@ -35,22 +39,25 @@ ul.comments .comment {
 }
 ul.comments .comment .score {
   background-color: hsl(223, 19%, 93%);
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
   width: 100px;
   border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 0.75rem;
-  font-weight: 500;
+  gap: 0.25rem;
 }
 ul.comments .comment .score i {
   color: hsl(211, 10%, 45%);
   font-size: 12px;
+  font-weight: 900;
   width: 100%;
+  height: 2rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 ul.comments .comment .score i:hover {
   color: hsl(238, 40%, 52%);
@@ -58,4 +65,18 @@ ul.comments .comment .score i:hover {
 }
 ul.comments .comment .score .value {
   color: hsl(238, 40%, 52%);
+  font-weight: 500;
+}
+ul.comments .comment section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+}
+ul.comments .comment section .top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }/*# sourceMappingURL=style.css.map */
