--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -1,3 +1,7 @@
+button {
+  all: unset;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -73,10 +77,40 @@ ul.comments .comment section {
   align-items: center;
   flex-direction: column;
   align-items: flex-start;
+  gap: 1rem;
 }
 ul.comments .comment section .top {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+ul.comments .comment section .top img {
+  width: 2rem;
+}
+ul.comments .comment section .top .left,
+ul.comments .comment section .top .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+}
+ul.comments .comment section .top .time {
+  color: hsl(211, 10%, 45%);
+}
+ul.comments .comment section .top .reply {
+  color: hsl(238, 40%, 52%);
+  cursor: pointer;
+}
+ul.comments .comment section .top .reply i {
+  margin-right: 0.5rem;
+}
+ul.comments .comment section .top .delete {
+  color: hsl(358, 79%, 66%);
+}
+ul.comments .comment section .content {
+  color: hsl(211, 10%, 45%);
 }/*# sourceMappingURL=style.css.map */
