--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -27,7 +27,7 @@ ul.comments {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.25rem;
 }
 ul.comments .comment {
   background-color: hsl(0, 0%, 100%);
@@ -38,12 +38,13 @@ ul.comments .comment {
   align-items: center;
   flex-direction: row;
   justify-content: flex-start;
-  gap: 1rem;
-  padding: 1rem;
+  gap: 1.25rem;
+  padding: 1.25rem;
 }
 ul.comments .comment .score {
   background-color: hsl(223, 19%, 93%);
-  width: 100px;
+  max-width: 40px;
+  min-width: 40px;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -54,7 +55,7 @@ ul.comments .comment .score {
 ul.comments .comment .score i {
   color: hsl(211, 10%, 45%);
   font-size: 12px;
-  font-weight: 900;
+  font-weight: bold;
   width: 100%;
   height: 2rem;
   text-align: center;
@@ -101,14 +102,20 @@ ul.comments .comment section .top .right {
 ul.comments .comment section .top .time {
   color: hsl(211, 10%, 45%);
 }
-ul.comments .comment section .top .reply {
+ul.comments .comment section .top .right {
+  font-weight: 500;
+}
+ul.comments .comment section .top .right .reply {
   color: hsl(238, 40%, 52%);
   cursor: pointer;
 }
-ul.comments .comment section .top .reply i {
+ul.comments .comment section .top .right .reply:hover {
+  color: hsl(239, 57%, 85%);
+}
+ul.comments .comment section .top .right .reply i {
   margin-right: 0.5rem;
 }
-ul.comments .comment section .top .delete {
+ul.comments .comment section .top .right .delete {
   color: hsl(358, 79%, 66%);
 }
 ul.comments .comment section .content {
