--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -48,7 +48,7 @@ img {
 ul.comments {
 	width: 100%;
 	@include flexCenter(column);
-	gap: 1rem;
+	gap: 1.25rem;
 
 	.comment {
 		background-color: $white;
@@ -56,14 +56,13 @@ ul.comments {
 		border-radius: 5px;
 		@include flexCenter(row);
 		justify-content: flex-start;
-		gap: 1rem;
-		padding: 1rem;
+		gap: 1.25rem;
+		padding: 1.25rem;
 
 		.score {
 			background-color: $light-grey;
-			// padding-top: 0.75rem;
-			// padding-bottom: 0.75rem;
-			width: 100px;
+			max-width: 40px;
+			min-width: 40px;
 			border-radius: 10px;
 			@include flexCenter(column);
 			gap: 0.25rem;
@@ -71,7 +70,7 @@ ul.comments {
 			i {
 				color: $greyish-blue;
 				font-size: 12px;
-				font-weight: 900;
+				font-weight: bold;
 				width: 100%;
 				height: 2rem;
 				text-align: center;
@@ -113,17 +112,25 @@ ul.comments {
 					color: $greyish-blue;
 				}
 
-				.reply {
-					color: $moderate-blue;
-					cursor: pointer;
+				.right {
+					font-weight: 500;
 
-					i {
-						margin-right: 0.5rem;
+					.reply {
+						color: $moderate-blue;
+						cursor: pointer;
+
+						&:hover {
+							color: $light-greyish-blue;
+						}
+
+						i {
+							margin-right: 0.5rem;
+						}
 					}
-				}
 
-				.delete {
-					color: $soft-red;
+					.delete {
+						color: $soft-red;
+					}
 				}
 			}
 
