made user a variable and added tagged users

--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -41,6 +41,10 @@ img {
 	width: 100%;
 }
 
+#root {
+	text-align: center;
+}
+
 // =============
 // Comment
 // =============
@@ -140,6 +144,13 @@ ul.comments {
 		}
 	}
 }
+
+// =============
+// Replies
+// =============
+
+
+
 
 // =============
 //
