--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -28,6 +28,7 @@ button {
 	padding: 0;
 	list-style-type: none;
 	font-size: 16px;
+	font-style: normal;
 }
 
 body {
@@ -41,9 +42,9 @@ img {
 	width: 100%;
 }
 
-#root {
-	text-align: center;
-}
+// #root {
+// 	text-align: center;
+// }
 
 // =============
 // Comment
@@ -112,6 +113,11 @@ ul.comments {
 					gap: 1rem;
 				}
 
+				.username {
+					font-weight: 500;
+					color: $dark-blue;
+				}
+
 				.time {
 					color: $greyish-blue;
 				}
@@ -140,6 +146,12 @@ ul.comments {
 
 			.content {
 				color: $greyish-blue;
+
+				.replying-to {
+					font-weight: 500;
+					color: $moderate-blue;
+					cursor: pointer;
+				}
 			}
 		}
 	}
@@ -148,9 +160,6 @@ ul.comments {
 // =============
 // Replies
 // =============
-
-
-
 
 // =============
 //
