--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -103,6 +103,23 @@ ul.comments .comment section .top .right {
 ul.comments .comment section .top .username {
   font-weight: 500;
   color: hsl(212, 24%, 26%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+ul.comments .comment section .top .username .you-tag {
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(238, 40%, 52%);
+  border-radius: 2px;
+  padding: 0.2rem 0.3rem;
+  padding-top: 0.1rem;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 ul.comments .comment section .top .time {
   color: hsl(211, 10%, 45%);
