added all extra designs for user comment

--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -126,19 +126,23 @@ ul.comments .comment section .top .time {
 }
 ul.comments .comment section .top .right {
   font-weight: 500;
+  gap: 1.5rem;
 }
-ul.comments .comment section .top .right .reply {
+ul.comments .comment section .top .right button {
   color: hsl(238, 40%, 52%);
   cursor: pointer;
 }
-ul.comments .comment section .top .right .reply:hover {
+ul.comments .comment section .top .right button:hover {
   color: hsl(239, 57%, 85%);
 }
-ul.comments .comment section .top .right .reply i {
+ul.comments .comment section .top .right button i {
   margin-right: 0.5rem;
 }
 ul.comments .comment section .top .right .delete {
   color: hsl(358, 79%, 66%);
+}
+ul.comments .comment section .top .right .delete:hover {
+  color: hsl(357, 100%, 86%);
 }
 ul.comments .comment section .content {
   color: hsl(211, 10%, 45%);
