design for replies done

--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -97,6 +97,7 @@ ul.comments .comment section .top {
 }
 ul.comments .comment section .top img {
   width: 2rem;
+  cursor: pointer;
 }
 ul.comments .comment section .top .left,
 ul.comments .comment section .top .right {
@@ -114,6 +115,7 @@ ul.comments .comment section .top .username {
   align-items: center;
   flex-direction: row;
   gap: 0.5rem;
+  cursor: pointer;
 }
 ul.comments .comment section .top .username .you-tag {
   color: hsl(0, 0%, 100%);
@@ -167,12 +169,8 @@ ul.replies {
   height: 100%;
 }
 ul.replies .line {
-  width: 50px;
-  height: 100%;
-  background-color: hsl(239, 57%, 85%);
-  border: 1px solid red;
-  margin: 0 2rem;
-}
-ul.replies .comment {
-  width: 100%;
+  width: 5px;
+  background-color: hsl(223, 19%, 93%);
+  margin: 0 2.5rem;
+  align-self: stretch;
 }/*# sourceMappingURL=style.css.map */
