--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -36,6 +36,7 @@ body {
 	font-size: 16px;
 	background-color: $very-light-grey;
 	padding: 3rem;
+	overflow-x: hidden;
 }
 
 img {
@@ -47,6 +48,12 @@ img {
 	padding: 0 calc(300px - 4rem);
 }
 
+@media screen and (min-width: 570px) {
+	#root {
+		padding: 0;
+	}
+}
+
 // =============
 // Comment
 // =============
@@ -56,6 +63,7 @@ ul.comments {
 	gap: 1.25rem;
 
 	.comment {
+		position: relative;
 		background-color: $white;
 		border-radius: 6px;
 		@include flexCenter(row);
@@ -99,7 +107,7 @@ ul.comments {
 
 			.top {
 				@include flexCenter(row);
-				justify-content: space-between;
+				justify-content: flex-start;
 				width: 100%;
 
 				img {
@@ -138,6 +146,9 @@ ul.comments {
 				.right {
 					font-weight: 500;
 					gap: 1.5rem;
+					position: absolute;
+					top: 1.7rem;
+					right: 1.5rem;
 
 					button {
 						color: $moderate-blue;
@@ -171,6 +182,32 @@ ul.comments {
 					cursor: pointer;
 				}
 			}
+		}
+	}
+}
+
+@media screen and (max-width: 570px) {
+	ul.comments .comment {
+		flex-direction: column-reverse;
+
+		.score {
+			flex-direction: row;
+			gap: 0.5rem;
+			max-width: unset;
+			min-width: unset;
+			min-height: 40px;
+			max-height: 40px;
+			align-self: flex-start;
+
+			i {
+				width: 2rem;
+				height: auto;
+			}
+		}
+
+		section .top .right {
+			top: unset;
+			bottom: 2rem;
 		}
 	}
 }
