--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -31,7 +31,27 @@ img {
   padding: 0 calc(300px - 4rem);
 }
 
-@media screen and (min-width: 570px) {
+@media screen and (max-width: 1200px) {
+  #root {
+    padding: 0 calc(250px - 4rem);
+  }
+}
+@media screen and (max-width: 1100px) {
+  #root {
+    padding: 0 calc(200px - 4rem);
+  }
+}
+@media screen and (max-width: 1000px) {
+  #root {
+    padding: 0 calc(150px - 4rem);
+  }
+}
+@media screen and (max-width: 900px) {
+  #root {
+    padding: 0 calc(100px - 4rem);
+  }
+}
+@media screen and (max-width: 800px) {
   #root {
     padding: 0;
   }
@@ -171,7 +191,7 @@ ul.comments .comment section .content .replying-to {
   cursor: pointer;
 }
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 730px) {
   ul.comments .comment {
     flex-direction: column-reverse;
   }
@@ -207,6 +227,16 @@ ul.replies .line {
   align-self: stretch;
 }
 
+@media screen and (max-width: 550px) {
+  ul.replies .line {
+    margin: 0 1.5rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  ul.replies .line {
+    margin: 0 1rem;
+  }
+}
 form {
   display: flex;
   justify-content: center;
