--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -48,7 +48,31 @@ img {
 	padding: 0 calc(300px - 4rem);
 }
 
-@media screen and (min-width: 570px) {
+@media screen and (max-width: 1200px) {
+	#root {
+		padding: 0 calc(250px - 4rem);
+	}
+}
+
+@media screen and (max-width: 1100px) {
+	#root {
+		padding: 0 calc(200px - 4rem);
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	#root {
+		padding: 0 calc(150px - 4rem);
+	}
+}
+
+@media screen and (max-width: 900px) {
+	#root {
+		padding: 0 calc(100px - 4rem);
+	}
+}
+
+@media screen and (max-width: 800px) {
 	#root {
 		padding: 0;
 	}
@@ -186,7 +210,7 @@ ul.comments {
 	}
 }
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 730px) {
 	ul.comments .comment {
 		flex-direction: column-reverse;
 
@@ -225,6 +249,18 @@ ul.replies {
 		background-color: $light-grey;
 		margin: 0 2.5rem;
 		align-self: stretch;
+	}
+}
+
+@media screen and (max-width: 550px) {
+	ul.replies .line {
+		margin: 0 1.5rem;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	ul.replies .line {
+		margin: 0 1rem;
 	}
 }
 
