form shows when reply button clicked

--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -28,6 +28,7 @@ img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  gap: 2rem;
   padding: 0 calc(300px - 4rem);
 }
 
@@ -249,7 +250,7 @@ form {
   border-radius: 6px;
   padding: 1.25rem;
   width: 100%;
-  margin-top: 1.25rem;
+  margin-top: -0.75rem;
 }
 form img {
   width: 2.5rem;
