fixed placeholder not showing and styled text in textbox

--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -264,6 +264,7 @@ form .textarea {
   min-height: 80px;
   overflow: auto;
   cursor: text;
+  color: hsl(212, 24%, 26%);
 }
 form .textarea:focus {
   border-color: hsl(211, 10%, 45%);
