--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -75,6 +75,7 @@ ul.comments .comment {
   justify-content: flex-start;
   gap: 1.25rem;
   padding: 1.25rem;
+  width: 100%;
 }
 ul.comments .comment .score {
   background-color: hsl(223, 19%, 93%);
@@ -113,6 +114,7 @@ ul.comments .comment section {
   align-items: center;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: space-between;
   gap: 1rem;
 }
 ul.comments .comment section .top {
@@ -120,7 +122,7 @@ ul.comments .comment section .top {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100%;
 }
 ul.comments .comment section .top img {
@@ -163,9 +165,6 @@ ul.comments .comment section .top .time {
 ul.comments .comment section .top .right {
   font-weight: 500;
   gap: 1.5rem;
-  position: absolute;
-  top: 1.7rem;
-  right: 1.5rem;
 }
 ul.comments .comment section .top .right button {
   color: hsl(238, 40%, 52%);
@@ -195,6 +194,8 @@ ul.comments .comment section .content .replying-to {
 @media screen and (max-width: 730px) {
   ul.comments .comment {
     flex-direction: column-reverse;
+    align-items: flex-start;
+    justify-content: center;
   }
   ul.comments .comment .score {
     flex-direction: row;
@@ -210,7 +211,8 @@ ul.comments .comment section .content .replying-to {
     height: auto;
   }
   ul.comments .comment section .top .right {
-    top: unset;
+    position: absolute;
+    right: 1.5rem;
     bottom: 2rem;
   }
 }
