--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -95,6 +95,7 @@ ul.comments {
 		justify-content: flex-start;
 		gap: 1.25rem;
 		padding: 1.25rem;
+		width: 100%;
 
 		.score {
 			background-color: $light-grey;
@@ -128,11 +129,12 @@ ul.comments {
 		section {
 			@include flexCenter(column);
 			align-items: flex-start;
+			justify-content: space-between;
 			gap: 1rem;
 
 			.top {
 				@include flexCenter(row);
-				justify-content: flex-start;
+				justify-content: space-between;
 				width: 100%;
 
 				img {
@@ -171,9 +173,6 @@ ul.comments {
 				.right {
 					font-weight: 500;
 					gap: 1.5rem;
-					position: absolute;
-					top: 1.7rem;
-					right: 1.5rem;
 
 					button {
 						color: $moderate-blue;
@@ -214,6 +213,8 @@ ul.comments {
 @media screen and (max-width: 730px) {
 	ul.comments .comment {
 		flex-direction: column-reverse;
+		align-items: flex-start;
+		justify-content: center;
 
 		.score {
 			flex-direction: row;
@@ -231,7 +232,8 @@ ul.comments {
 		}
 
 		section .top .right {
-			top: unset;
+			position: absolute;
+			right: 1.5rem;
 			bottom: 2rem;
 		}
 	}
