@ of replying to shows in textarea when replying

--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -116,6 +116,7 @@ ul.comments .comment section {
   align-items: flex-start;
   justify-content: space-between;
   gap: 1rem;
+  width: 100%;
 }
 ul.comments .comment section .top {
   display: flex;
