--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -86,6 +86,7 @@ img {
 ul.comments {
 	@include flexCenter(column);
 	gap: 1.25rem;
+	width: 100%;
 
 	.comment {
 		position: relative;
@@ -247,6 +248,7 @@ ul.comments {
 ul.replies {
 	@include flexCenter(row);
 	height: 100%;
+	width: 100%;
 
 	.line {
 		width: 5px;
